# RecipeCalculator

./: .gitignore  GITHUB_SETUP.md  README.md  buildozer.spec  main.py  pyproject.toml
.github/workflows/: build-apk.yml
src/recipecalculator/: app.py
